--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -17,52 +17,63 @@
         "import zipfile\n",
         "import os\n",
         "\n",
+        "# Configurações baseadas no seu mapeamento de sucesso\n",
+        "COL_DATA = 6\n",
+        "COL_SITUACAO = 5\n",
+        "COL_CNPJ = 0\n",
+        "COL_CNAE = 11\n",
+        "COL_DDD = 18\n",
+        "COL_FONE = 19\n",
+        "\n",
         "url = \"https://arquivos.receitafederal.gov.br/dados/cnpj/dados_abertos_cnpj/2025-12/Estabelecimentos0.zip\"\n",
-        "print(\"Baixando Lote 0 para análise definitiva...\")\n",
+        "print(\"Iniciando extração total do Lote 0 usando o novo mapa (Coluna 6)...\")\n",
         "os.system(f\"wget -q {url} -O lote0.zip\")\n",
         "\n",
         "try:\n",
         "    with zipfile.ZipFile('lote0.zip', 'r') as z:\n",
         "        nome = [f for f in z.namelist() if 'ESTABELE' in f.upper()][0]\n",
         "        with z.open(nome) as f:\n",
-        "            # Lemos apenas as primeiras 5000 linhas para mapear o arquivo\n",
-        "            df_amostra = pd.read_csv(f, sep=';', encoding='latin-1', header=None, dtype=str, nrows=5000)\n",
+        "            # Lendo o arquivo inteiro em blocos de 1 milhão\n",
+        "            chunks = pd.read_csv(f, sep=';', encoding='latin-1', header=None,\n",
+        "                                 dtype=str, chunksize=1000000)\n",
         "\n",
-        "            print(\"\\n--- MAPEAMENTO DE COLUNAS ---\")\n",
-        "            coluna_data = None\n",
-        "            for col in df_amostra.columns:\n",
-        "                # Procura uma coluna onde os valores comecem com 202 (2024 ou 2025)\n",
-        "                if df_amostra[col].str.startswith('202', na=False).any():\n",
-        "                    coluna_data = col\n",
-        "                    print(f\" Achei! A Data de Abertura está na COLUNA: {col}\")\n",
-        "                    break\n",
+        "            leads_finais = []\n",
         "\n",
-        "            if coluna_data is not None:\n",
-        "                # Agora que sabemos a coluna real, filtramos o arquivo todo\n",
-        "                print(f\"Iniciando extração real usando a coluna {coluna_data}...\")\n",
+        "            for i, chunk in enumerate(chunks):\n",
+        "                # Filtro: Ativa (02) + Ano 2024/2025 + Telefone não vazio\n",
+        "                filtro = (chunk[COL_SITUACAO] == '02') & \\\n",
+        "                         (chunk[COL_DATA].str.startswith('202', na=False)) & \\\n",
+        "                         (chunk[COL_FONE].notnull())\n",
         "\n",
-        "                # Vamos assumir que o telefone está 8 colunas depois da data (padrão da Receita)\n",
-        "                col_ddd = coluna_data + 7\n",
-        "                col_fone = coluna_data + 8\n",
-        "                col_situacao = coluna_data - 1\n",
+        "                dados = chunk[filtro].copy()\n",
         "\n",
-        "                # Filtro Final\n",
-        "                filtro = (df_amostra[col_situacao] == '02') & \\\n",
-        "                         (df_amostra[coluna_data].str.startswith('202', na=False))\n",
+        "                if not dados.empty:\n",
+        "                    # Seleciona e renomeia\n",
+        "                    selecao = dados[[COL_CNPJ, COL_DATA, COL_CNAE, COL_DDD, COL_FONE]]\n",
+        "                    selecao.columns = ['cnpj', 'data_abertura', 'cnae', 'ddd', 'telefone']\n",
+        "                    leads_finais.append(selecao)\n",
+        "                    print(f\"Bloco {i}: +{len(selecao)} leads encontrados!\")\n",
         "\n",
-        "                leads = df_amostra[filtro].iloc[:, [0, col_situacao, coluna_data, col_fone]]\n",
-        "                print(f\"Sucesso na amostra! Encontrados {len(leads)} leads.\")\n",
+        "            if leads_finais:\n",
+        "                df_completo = pd.concat(leads_finais)\n",
         "\n",
-        "                # Salvando o resultado da amostra para você já ver algo\n",
+        "                # Criar link do WhatsApp\n",
+        "                df_completo['whatsapp'] = \"https://wa.me/55\" + df_completo['ddd'].str.strip() + df_completo['telefone'].str.strip()\n",
+        "\n",
+        "                # Salvar no Drive\n",
         "                from google.colab import drive\n",
         "                drive.mount('/content/drive')\n",
-        "                leads.to_excel('/content/drive/MyDrive/LEADS_DE_VERDADE.xlsx', index=False)\n",
-        "                print(\"Arquivo 'LEADS_DE_VERDADE.xlsx' salvo no Drive!\")\n",
+        "                caminho = '/content/drive/MyDrive/LEADS_LOTE0_2024_2025.xlsx'\n",
+        "                df_completo.to_excel(caminho, index=False)\n",
+        "\n",
+        "                print(f\"\\n--- SUCESSO TOTAL! ---\")\n",
+        "                print(f\"Foram encontrados {len(df_completo)} leads reais!\")\n",
+        "                print(f\"Arquivo salvo em: {caminho}\")\n",
         "            else:\n",
-        "                print(\"ERRO: Não encontrei nenhuma coluna com o ano 2024 ou 2025 nesta amostra.\")\n",
+        "                print(\"Nenhum lead encontrado no processamento completo.\")\n",
         "\n",
         "except Exception as e:\n",
-        "    print(f\"Erro técnico: {e}\")\n",
+        "    print(f\"Erro: {e}\")\n",
         "finally:\n",
         "    if os.path.exists('lote0.zip'): os.remove('lote0.zip')"
       ],
@@ -70,23 +81,45 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "55igWoCExB1p",
-        "outputId": "a6c49beb-45e1-4ccc-8e3f-5fa15e5cb5cc"
+        "id": "mrE563T_Ir47",
+        "outputId": "0c970154-d679-4fff-8252-ea5527dc0c5f"
       },
-      "execution_count": 21,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Baixando Lote 0 para análise definitiva...\n",
-            "\n",
-            "--- MAPEAMENTO DE COLUNAS ---\n",
-            " Achei! A Data de Abertura está na COLUNA: 6\n",
-            "Iniciando extração real usando a coluna 6...\n",
-            "Sucesso na amostra! Encontrados 59 leads.\n",
+            "Iniciando extração total do Lote 0 usando o novo mapa (Coluna 6)...\n",
+            "Bloco 0: +38419 leads encontrados!\n",
+            "Bloco 1: +60953 leads encontrados!\n",
+            "Bloco 2: +152470 leads encontrados!\n",
+            "Bloco 3: +456844 leads encontrados!\n",
+            "Bloco 4: +704269 leads encontrados!\n",
+            "Bloco 5: +392258 leads encontrados!\n",
+            "Bloco 6: +16513 leads encontrados!\n",
+            "Bloco 7: +40535 leads encontrados!\n",
+            "Bloco 8: +64593 leads encontrados!\n",
+            "Bloco 9: +184451 leads encontrados!\n",
+            "Bloco 10: +490731 leads encontrados!\n",
+            "Bloco 11: +724512 leads encontrados!\n",
+            "Bloco 12: +298797 leads encontrados!\n",
+            "Bloco 13: +19212 leads encontrados!\n",
+            "Bloco 14: +41430 leads encontrados!\n",
+            "Bloco 15: +66793 leads encontrados!\n",
+            "Bloco 16: +225560 leads encontrados!\n",
+            "Bloco 17: +519466 leads encontrados!\n",
+            "Bloco 18: +741579 leads encontrados!\n",
+            "Bloco 19: +206241 leads encontrados!\n",
+            "Bloco 20: +21043 leads encontrados!\n",
+            "Bloco 21: +43409 leads encontrados!\n",
+            "Bloco 22: +69300 leads encontrados!\n",
+            "Bloco 23: +257535 leads encontrados!\n",
+            "Bloco 24: +558233 leads encontrados!\n",
+            "Bloco 25: +759564 leads encontrados!\n",
+            "Bloco 26: +92939 leads encontrados!\n",
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "Arquivo 'LEADS_DE_VERDADE.xlsx' salvo no Drive!\n"
+            "Erro: This sheet is too large! Your sheet size is: 7247649, 6 Max sheet size is: 1048576, 16384\n"
           ]
         }
       ]
@@ -96,7 +129,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1oWb-S3z4V5Cmd3N3aB_OudEsxx4P-PqN",
-      "authorship_tag": "ABX9TyNh7b8fUi9DSY4f5fBwf2GU",
+      "authorship_tag": "ABX9TyO9NX7jjLVTkt+nvY2dYen9",
       "include_colab_link": true
     },
     "kernelspec": {
