--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -229,13 +229,158 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from google.colab import drive\n",
+        "\n",
+        "# 1. Conectar ao seu Google Drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# 2. Configurações - AJUSTE AQUI O CAMINHO DO SEU ARQUIVO\n",
+        "# Exemplo: '/content/drive/MyDrive/CNPJ/K3241.K03200Y0.D41109.ESTABELE.EMPRECSV'\n",
+        "caminho_arquivo = '/content/drive/MyDrive/LEADS_NOVEMBRO_2025.xlsx'\n",
+        "\n",
+        "# 3. Colunas importantes do arquivo ESTABELECIMENTO (Layout da Receita)\n",
+        "# 0: CNPJ Básico, 11: Situação (2=Ativa), 12: Data Abertura, 20: DDD, 21: Telefone\n",
+        "colunas = [0, 11, 12, 20, 21]\n",
+        "nomes_colunas = ['cnpj_basico', 'situacao', 'data_abertura', 'ddd', 'telefone']\n",
+        "\n",
+        "print(\"Lendo arquivo... isso pode demorar um pouco dependendo do tamanho.\")\n",
+        "\n",
+        "# 4. Ler o arquivo com filtros (Usando separador ';' que é o padrão da Receita)\n",
+        "# Lemos em 'chunks' (pedaços) para não travar a memória\n",
+        "chunks = pd.read_csv(caminho_arquivo, sep=';', encoding='latin-1',\n",
+        "                     header=None, usecols=colunas, names=nomes_colunas,\n",
+        "                     dtype=str, chunksize=100000)\n",
+        "\n",
+        "lista_filtrada = []\n",
+        "\n",
+        "for chunk in chunks:\n",
+        "    # Filtrar: Situação Ativa (02) e apenas quem tem telefone preenchido\n",
+        "    filtro = (chunk['situacao'] == '02') & (chunk['telefone'].notnull())\n",
+        "\n",
+        "    # Filtrar por Data (Exemplo: Empresas abertas em Novembro de 2025)\n",
+        "    # A data na Receita vem como YYYYMMDD (Ex: 20251101)\n",
+        "    filtro_data = chunk['data_abertura'].str.startswith('202511')\n",
+        "\n",
+        "    lista_filtrada.append(chunk[filtro & filtro_data])\n",
+        "\n",
+        "# Unir os resultados\n",
+        "df_final = pd.concat(lista_filtrada)\n",
+        "\n",
+        "# 5. Criar link para WhatsApp\n",
+        "def criar_link(row):\n",
+        "    tel = str(row['ddd']) + str(row['telefone'])\n",
+        "    tel = ''.join(filter(str.isdigit, tel)) # remove espaços/traços\n",
+        "    return f'https://wa.me/55{tel}'\n",
+        "\n",
+        "df_final['link_whatsapp'] = df_final.apply(criar_link, axis=1)\n",
+        "\n",
+        "# 6. Salvar o resultado em um Excel no seu Drive\n",
+        "df_final.to_excel('/content/drive/MyDrive/leadsoficial_novembro_2025.xlsx', index=False)\n",
+        "\n",
+        "print(f\"Sucesso! Foram encontrados {len(df_final)} leads.\")\n",
+        "print(\"O arquivo 'leadsoficial_novembro_2025.xlsx' foi salvo no seu Google Drive.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 602
+        },
+        "id": "WrPR2MIVitB4",
+        "outputId": "c44e7f58-1cd1-408b-f6cf-daabde43463d"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "Lendo arquivo... isso pode demorar um pouco dependendo do tamanho.\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ParserError",
+          "evalue": "Error tokenizing data. C error: Buffer overflow caught - possible malformed input file.\n",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mParserError\u001b[0m                               Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-2266796202.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0mlista_filtrada\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mchunk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mchunks\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m     \u001b[0;31m# Filtrar: Situação Ativa (02) e apenas quem tem telefone preenchido\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0mfiltro\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mchunk\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'situacao'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'02'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mchunk\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'telefone'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnotnull\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1841\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__next__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1842\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1843\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_chunk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1844\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1845\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36mget_chunk\u001b[0;34m(self, size)\u001b[0m\n\u001b[1;32m   1983\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1984\u001b[0m             \u001b[0msize\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnrows\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_currow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1985\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1986\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1987\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__enter__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mSelf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m   1921\u001b[0m                     \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1922\u001b[0m                     \u001b[0mcol_dict\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1923\u001b[0;31m                 \u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m  \u001b[0;31m# type: ignore[attr-defined]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1924\u001b[0m                     \u001b[0mnrows\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1925\u001b[0m                 )\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/parsers/c_parser_wrapper.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, nrows)\u001b[0m\n\u001b[1;32m    232\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    233\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlow_memory\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 234\u001b[0;31m                 \u001b[0mchunks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_low_memory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    235\u001b[0m                 \u001b[0;31m# destructive to chunks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    236\u001b[0m                 \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_concatenate_chunks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchunks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32mparsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.read_low_memory\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mparsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._read_rows\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mparsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._tokenize_rows\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mparsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._check_tokenize_status\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mparsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.raise_parser_error\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mParserError\u001b[0m: Error tokenizing data. C error: Buffer overflow caught - possible malformed input file.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Carregar os leads que você já salvou de Novembro\n",
+        "df_vendas = pd.read_excel('/content/drive/MyDrive/LEADS_NOVEMBRO_2025.xlsx')\n",
+        "\n",
+        "# Criar uma coluna com a mensagem personalizada\n",
+        "def criar_mensagem(row):\n",
+        "    # Aqui você personaliza o seu texto!\n",
+        "    texto = (f\"Olá! Vi que você abriu sua empresa recentemente em {row['data_abertura']}. \"\n",
+        "             f\"Sou especialista em taxas para novos negócios. Podemos conversar?\")\n",
+        "    return texto\n",
+        "\n",
+        "df_vendas['mensagem_customizada'] = df_vendas.apply(criar_mensagem, axis=1)\n",
+        "\n",
+        "# Salvar a planilha pronta para o combate\n",
+        "df_vendas.to_excel('/content/drive/MyDrive/PLANILHA_PRONTA_PARA_VENDAS.xlsx', index=False)\n",
+        "print(\"Planilha de automação gerada com sucesso!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S_gotzHvjxtK",
+        "outputId": "21683479-49c8-442d-bde8-afc79b163bd9"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Exception ignored in: <function ZipFile.__del__ at 0x7df960c04c20>\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/lib/python3.12/zipfile/__init__.py\", line 1966, in __del__\n",
+            "    self.close()\n",
+            "  File \"/usr/lib/python3.12/zipfile/__init__.py\", line 1983, in close\n",
+            "    self.fp.seek(self.start_dir)\n",
+            "ValueError: seek of closed file\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Planilha de automação gerada com sucesso!\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "mount_file_id": "1oWb-S3z4V5Cmd3N3aB_OudEsxx4P-PqN",
-      "authorship_tag": "ABX9TyM/SmIrUx3vEMGkCdhuozni",
+      "authorship_tag": "ABX9TyOoWcck9IxQ01Z4ZFXsq6Xj",
       "include_colab_link": true
     },
     "kernelspec": {
