--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOF6ZPoKv6hLSzyRFVRQ/7Y",
+      "authorship_tag": "ABX9TyNpQ17YV/F1PYb06a30SKtB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,7 +108,7 @@
         "id": "n8F5jt_fhW-D",
         "outputId": "ce0df26a-ce73-44d9-df1b-262c898047fc"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,6 +164,103 @@
             "Bloco 50: leads encontrados...\n",
             "Bloco 52: leads encontrados...\n",
             "✅ SUCESSO! 8577 leads de 20251201 salvos no Drive.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import zipfile\n",
+        "import os\n",
+        "import urllib.parse\n",
+        "import random\n",
+        "from google.colab import drive\n",
+        "\n",
+        "# --- 1. CONFIGURAÇÕES ---\n",
+        "DATA_TESTE = \"20251201\" # Ajuste para o dia que desejar\n",
+        "LINK_GRUPO = \"https://chat.whatsapp.com/SEU_LINK_AQUI\" # COLOQUE SEU LINK AQUI\n",
+        "\n",
+        "# URL do lote de Dezembro\n",
+        "url = \"https://arquivos.receitafederal.gov.br/dados/cnpj/dados_abertos_cnpj/2025-12/Estabelecimentos0.zip\"\n",
+        "\n",
+        "# --- 2. FUNÇÕES DE APOIO ---\n",
+        "def gerar_conteudo_variado(row):\n",
+        "    ddd = str(row['ddd']).strip()\n",
+        "    fone = str(row['telefone']).strip()\n",
+        "\n",
+        "    # Suas mensagens ajustadas\n",
+        "    s1 = f\"Olá! Parabéns pela abertura da sua empresa. Sou a Isabela e também empreendo. Sei que o começo do MEI gera muitas dúvidas (nota fiscal, impostos, fornecedores...). Criei uma comunidade gratuita onde compartilho planilhas e guias práticos. Se quiser entrar e baixar os materiais: {LINK_GRUPO}\"\n",
+        "    s2 = f\"Oi! Tudo bem? Parabéns pelo novo CNPJ! Sou empreendedora e sei que o início é difícil. Te convido para minha comunidade de apoio, lá nos ajudamos gratuitamente com emissão de NF, fornecedores e logística: {LINK_GRUPO}\"\n",
+        "    s3 = f\"Oi, parabéns pelo novo negócio! 🚀 Vi que você abriu seu CNPJ agora. Se precisar de ajuda com a parte burocrática ou fornecedores, temos um grupo de empreendedores que se ajuda: {LINK_GRUPO}\"\n",
+        "\n",
+        "    msg_escolhida = random.choice([s1, s2, s3])\n",
+        "    texto_codificado = urllib.parse.quote(msg_escolhida)\n",
+        "\n",
+        "    link_wa = f\"https://wa.me/55{ddd}{fone}?text={texto_codificado}\"\n",
+        "    return link_wa, msg_escolhida\n",
+        "\n",
+        "# --- 3. EXECUÇÃO ---\n",
+        "if not os.path.exists('/content/drive'): drive.mount('/content/drive')\n",
+        "\n",
+        "if not os.path.exists('lote_final.zip'):\n",
+        "    print(\"📥 Baixando arquivo da Receita...\")\n",
+        "    os.system(f\"wget -q {url} -O lote_final.zip\")\n",
+        "\n",
+        "print(\"🔍 Minerando leads e gerando links...\")\n",
+        "leads = []\n",
+        "\n",
+        "try:\n",
+        "    with zipfile.ZipFile('lote_final.zip', 'r') as z:\n",
+        "        nome = [f for f in z.namelist() if 'ESTABELE' in f.upper()][0]\n",
+        "        with z.open(nome) as f:\n",
+        "            # Lendo apenas colunas essenciais para velocidade: 0(cnpj), 5(situacao), 6(data), 18(ddd), 19(fone)\n",
+        "            chunks = pd.read_csv(f, sep=';', encoding='latin-1', header=None,\n",
+        "                                 dtype=str, chunksize=500000, usecols=[0, 5, 6, 18, 19])\n",
+        "\n",
+        "            for chunk in chunks:\n",
+        "                condicao = (chunk[5] == '02') & (chunk[6] == DATA_TESTE) & (chunk[19].notnull())\n",
+        "                res = chunk[condicao].copy()\n",
+        "                if not res.empty:\n",
+        "                    res.columns = ['cnpj', 'situacao', 'data', 'ddd', 'telefone']\n",
+        "                    leads.append(res)\n",
+        "\n",
+        "    if leads:\n",
+        "        df_final = pd.concat(leads)\n",
+        "\n",
+        "        print(\"🔄 Aplicando rodízio de mensagens...\")\n",
+        "        resultados = df_final.apply(gerar_conteudo_variado, axis=1)\n",
+        "        df_final['link_whatsapp'] = [res[0] for res in resultados]\n",
+        "        df_final['mensagem_utilizada'] = [res[1] for res in resultados]\n",
+        "\n",
+        "        # Salvar no Drive\n",
+        "        caminho = f'/content/drive/MyDrive/LEADS_PRONTOS_{DATA_TESTE}.xlsx'\n",
+        "        df_final.to_excel(caminho, index=False)\n",
+        "        print(f\"✅ SUCESSO! Planilha gerada com {len(df_final)} leads em: {caminho}\")\n",
+        "    else:\n",
+        "        print(\"❌ Nenhum lead encontrado para esta data.\")\n",
+        "\n",
+        "except Exception as e:\n",
+        "    print(f\"❌ Erro: {e}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VYMv8kbGx4Y2",
+        "outputId": "1db8203e-c44d-4747-c0ef-c067c69c83ec"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "📥 Baixando arquivo da Receita...\n",
+            "🔍 Minerando leads e gerando links...\n",
+            "🔄 Aplicando rodízio de mensagens...\n",
+            "✅ SUCESSO! Planilha gerada com 8577 leads em: /content/drive/MyDrive/LEADS_PRONTOS_20251201.xlsx\n"
           ]
         }
       ]
